# rust-podcast-bot

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20230408134621_create_subscriptions_table.sql  20230408162307_create_episodes_table.sql
src/: api.rs  bot.rs  commands.rs  feed_service.rs  file_manager.rs  main.rs  store.rs  updater.rs
src/bot/: command_parser.rs  subscription_parser.rs
src/file_manager/: models.rs  tg_uploader.rs  ytdl_loader.rs
src/models/: episode.rs  mod.rs  rss_feed.rs  subscription.rs  youtube_item.rs
