[package]
name = "rust-podcast-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
url = "2"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0.44"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"]}
chrono = "0.4.24"
tide = "0.16.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
simple_xml_serialize = "0.3.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
